# r-chat

./: .env  .gitignore  Cargo.toml  LICENSE  log4rs.yml  readme-cn.md  readme.md
client/: Cargo.toml
client/src/: lib.rs
common/: Cargo.toml
common/src/: base.rs  biz_module.rs  chat_module.rs  chat_protocol.rs  cli.rs  config.rs  errors_define.rs  lib.rs  login_module.rs  p2p_module.rs  protocol_factory.rs  socket_module.rs  storage_module.rs  storge_module.rs  ui_module.rs
memory/src/: main.rs
server/: Cargo.toml
server/src/: base.rs  lib.rs
socket/: Cargo.toml
socket/src/: chat_protocol.rs  errors_define.rs  net.rs  protocol_factory.rs
socket/tests/: unit_test.rs
src/: chat_protocol.rs  errors_define.rs  lib.rs  main.rs  net.rs  protocol_factory.rs
tests/: unit_test.rs
userinfo/: Cargo.toml
userinfo-web/: Cargo.toml
userinfo-web/api/: Cargo.toml
userinfo-web/api/src/: lib.rs
userinfo-web/api/static/css/: normalize.css
userinfo-web/api/templates/: edit.html.tera  index.html.tera  new.html.tera
userinfo-web/entity/: Cargo.toml
userinfo-web/entity/src/: userinfo.rs
userinfo-web/service/src/: userinfo_dao.rs  userinfo_service.rs
userinfo-web/src/: lib.rs
userinfo/api/: Cargo.toml
userinfo/api/src/: lib.rs
userinfo/api/templates/: new.html.tera
userinfo/entity/src/: lib.rs
userinfo/service/: Cargo.toml
userinfo/service/src/: lib.rs  userinfo_dao.rs  userinfo_service.rs
userinfo/src/: lib.rs
