[package]
name = "r-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socket={path="socket"}
userinfo-web={path= "userinfo-web" }
common={path = "common"}
server={path = "server"}

[workspace]
members=[".","socket", "userinfo-web","common","server"]

