[package]
name = "r-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
userinfo-web={path= "userinfo-web" }
common={path = "common"}
server={path = "server"}
client={path = "client"}
log4rs="1.2.0"

[workspace]
members=[".", "userinfo-web","common","server","client"]

