[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1" , features = ["derive"]}
serde_json="1.0.104"
dotenvy = "0.15.7"
derive_more="0.99.17"
enum_index = "0.2.0"
enum_index_derive = "0.2.0"
chrono = "0.4.28"
log="0.4.17"
bincode="1.3.3"