[package]
name = "socket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
listenfd = "0.5"
serde = {version="1" , features = ["derive"]}
# serde_bytes="0.11.9"
bincode="1.3.3"
env_logger="0.10.0"
log="0.4.17"
# bytes = "1"
derive_more="0.99.17"
enum_index = "0.2.0"
enum_index_derive = "0.2.0"
serial_test ="2.0.0"
actix = "0.11.0"
actix-rt = "2.2"