[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity={path = "../entity"}
service={path = "../service"}
common={path = "../../common"}
actix-files = "0.6"
actix-http = "3"
actix-rt = "2.7"
actix-service = "2"
actix-web = "4"
actix = "0.13.0"
tera = "1.15.0"
dotenvy = "0.15.7"
listenfd = "0.5"
serde = "1"
env_logger="0.10.0"
log="0.4.17"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
bincode="1.3.3"
tokio = { version = "1", features = ["full"] }
derive_more="0.99.17"
async-trait="0.1.68"
serde_json="1.0.104"

