[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common={path = "../../common"}
entity={path = "../entity"}
actix-rt = "2.2" # <-- Runtime for actix
sea-orm= {version = "0.11.3", features = ["debug-print", "runtime-tokio-native-tls","sqlx-mysql"]}
bincode="1.3.3"
